# PHP_Championship

MyProject/: .htaccess  .htaccess.swp  README.md  pyproject.toml
MyProject/myproject/: check_env.php  funcs.php  index__.html  post.php  process_image.py  test.php  test.py  upload.php
MyProject/tests/: process_image.py
