[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Zakkey-GH <reedinortoop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
opencv-python = "^4.10.0.84"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
